--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "league/plates": "^3.1"
+        "league/plates": "^3.1",
+		"zeuxisoo/slim-whoops": "0.5.*"
     },
     "autoload": {
         "psr-4": {
